kubernetes/deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: $CI_ENVIRONMENT_SLUG
  namespace: $KUBE_NAMESPACE
  labels:
    app: $CI_ENVIRONMENT_SLUG
    pipeline_id: '$CI_PIPELINE_ID'
    build_id: '$CI_JOB_ID'
    track: stable
    commit: '$CI_COMMIT_SHA'
spec:
  selector:
    matchLabels:
      app: $CI_ENVIRONMENT_SLUG
      name: $CI_ENVIRONMENT_SLUG
      track: stable
  template:
    metadata:
      labels:
        name: $CI_ENVIRONMENT_SLUG
        app: $CI_ENVIRONMENT_SLUG
        track: stable
      annotations:
        build_id: '$CI_JOB_ID'
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: $KUBE_NAMESPACE-$CI_ENVIRONMENT_SLUG
          image: $CI_REGISTRY_IMAGE:$CI_COMMIT_SHA
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: $PORT
          readinessProbe:
            httpGet:
              path: /
              port: $PORT
              scheme: HTTP
            initialDelaySeconds: 5
            timeoutSeconds: 2
            periodSeconds: 3
            failureThreshold: 10
      imagePullSecrets:
        - name: gitlab-registry
