kubernetes/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: $CI_ENVIRONMENT_SLUG
  namespace: $KUBE_NAMESPACE
  labels:
    app: $CI_ENVIRONMENT_SLUG
    pipeline_id: "$CI_PIPELINE_ID"
    build_id: "$CI_JOB_ID"
    commit: "$CI_COMMIT_SHA"
spec:
  ports:
  - port: $PORT
    targetPort: $PORT
    protocol: TCP
    name: http
  selector:
    app: $CI_ENVIRONMENT_SLUG
